<resources>
    <string name="app_name">MovieApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="movie_thumbnail">Movie Thumbnail</string>
    <string name="popcorn_icon">Popcorn Icon</string>
    <string name="movies">Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="latest_tv_shows">Latest Tv Shows</string>
    <string name="popular_tv_shows">Popular Tv Shows</string>
    <string name="top_rated_tv_shows">Top Rated Tv Shows</string>
    <string name="more_information">More Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search...</string>
</resources>
